[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
jsonwebtoken = "9.3.0"
tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
jsonwebtokens-cognito = "0.1.1"
# base64 = "0.22.0"
base64 = "0.13.0"
serde = "1.0"
serde_json = "1.0"
hyper = "1.2.0"

